--- a/html/index.html
+++ b/html/index.html
@@ -36,16 +36,15 @@
                     <div class="containerapp">
 
 <h1 class="-light">FLO Retweets</h1>
-<p class="appsHeader-subhead -large"><a href="https://retweets.floblockchain.com/oAuthTwitter/start">Join FLO Retweets</a> on Twitter!<br>
-<br>
-The <a href="https://retweets.floblockchain.com/oAuthTwitter/start">FLO Retweets Bot</a> connects to your twitter
-    account and automatically retweets everything the official FLO twitter tweets!<br>
-You can also set it to tweet less frequently if you don't want to retweet everything.<br>
-Please <a href="https://retweets.floblockchain.com/oAuthTwitter/start">sign up</a> using your twitter account on
+<p class="appsHeader-subhead -large"><a href="https://retweets.floblockchain.com/oAuthTwitter/start">Join FLO Retweets</a> on Twitter!</p>
+<p>The <a href="https://retweets.floblockchain.com/oAuthTwitter/start">FLO Retweets Bot</a> connects to your twitter
+    account and automatically retweets everything the official FLO twitter tweets!</p>
+<p>You can also set it to tweet less frequently if you don't want to retweet everything.</p>
+<p>Please <a href="https://retweets.floblockchain.com/oAuthTwitter/start">sign up</a> using your twitter account on
     <a href="https://retweets.floblockchain.com/oAuthTwitter/start">https://retweets.floblockchain.com/oAuthTwitter/start</a>
     - after the authorization you will receive a Direct Message on Twitter with further information.</p>
 <p><a href="https://github.com/floblockchain/flo-retweets">View the FLO Retweets Bot source code</a> on GitHub!</p>
-<p>A service of<br><a href="https://www.flo.cash">www.flo.cash</a></p>
+<p>A service of <br> <a href="https://www.flo.cash">www.flo.cash</a></p>
 
                     </div>
                 </section>
