--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,7 @@
 <p>The <a href="https://retweets.floblockchain.com/oAuthTwitter/start">FLO Retweets Bot</a> connects to your twitter
     account and automatically retweets everything the official FLO twitter tweets!</p>
 <p>You can also set it to tweet less frequently if you don't want to retweet everything.</p>
+<p>The bot just retweets, please keep liking <img src="./css/like.png" alt=""> good tweets!</p>
 <p>Please <a href="https://retweets.floblockchain.com/oAuthTwitter/start">sign up</a> using your twitter account on
     <a href="https://retweets.floblockchain.com/oAuthTwitter/start">https://retweets.floblockchain.com/oAuthTwitter/start</a>
     - after the authorization you will receive a Direct Message on Twitter with further information.</p>
