--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -38,6 +38,7 @@
 <h1 class="-light">FLO Retweets</h1>
 <p class="appsHeader-subhead -large">
 <h2 class="-light">Thank you for joining us!</h2>
+<p>Want back to <a href="https://www.twitter.com">Twitter</a>?</p>
 <p><a href="https://github.com/floblockchain/flo-retweets">View the FLO Retweets Bot source code</a> on GitHub!</p>
 <p>A service of <br> <a href="https://www.flo.cash">www.flo.cash</a></p>
                     </div>
