--- a/html/canceled.html
+++ b/html/canceled.html
@@ -38,7 +38,7 @@
 <h1 class="-light">FLO Retweets</h1>
 <p class="appsHeader-subhead -large">
 <h2 class="-light">Ups, something went wrong!</h2>
-<p>You wanna <a href="https://retweets.floblockchain.com/oAuthTwitter/start">try again?</a></p>
+<p>You wanna <a href="https://retweets.floblockchain.com/oAuthTwitter/start">try again</a>?</p>
 <p>A service of <br> <a href="https://www.flo.cash">www.flo.cash</a></p>
                     </div>
                 </section>
