documentation, fix, html

--- a/html/canceled.html
+++ b/html/canceled.html
@@ -25,7 +25,7 @@
                         <div class="navbar-header">
                            <div class="navbar-brand-wrap">
                               <a class="navbar-brand" href="https://retweets.floblockchain.com">
-                              <img src="css/logo-with-name-v2.png" alt="">
+                              <img src="img/logo-with-name-v2.png" alt="">
                               </a>
                            </div>
                         </div>
@@ -44,7 +44,7 @@
                 </section>
                <footer class="site-footer block-invert">
                   <div class="container">
-                     <img class="site-footer-logo img-responsive" src="css/logo-v1.png" data-sr="bottom">
+                     <img class="site-footer-logo img-responsive" src="img/logo-v1.png" data-sr="bottom">
                      <p class="site-footer-copyright">2013-2019 © <a href="https://flo.cash">FLO</a> | All Rights Reserved.</p>
                   </div>
                </footer>
