--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
                         <div class="navbar-header">
                            <div class="navbar-brand-wrap">
                               <a class="navbar-brand" href="https://retweets.floblockchain.com">
-                              <img src="css/logo-with-name-v2.png" alt="">
+                              <img src="img/logo-with-name-v2.png" alt="">
                               </a>
                            </div>
                         </div>
@@ -40,7 +40,7 @@
 <p>The <a href="https://retweets.floblockchain.com/oAuthTwitter/start">FLO Retweets Bot</a> connects to your twitter
     account and automatically retweets everything the official FLO twitter tweets!</p>
 <p>You can also set it to tweet less frequently if you don't want to retweet everything.</p>
-<p>The bot just retweets, please keep liking <img src="./css/like.png" alt=""> good tweets!</p>
+<p>The bot just retweets, please keep liking <img src="./img/like.png" alt=""> good tweets!</p>
 <p>Please <a href="https://retweets.floblockchain.com/oAuthTwitter/start">sign up</a> using your twitter account on
     <a href="https://retweets.floblockchain.com/oAuthTwitter/start">https://retweets.floblockchain.com/oAuthTwitter/start</a>
     - after the authorization you will receive a Direct Message on Twitter with further information.</p>
@@ -51,7 +51,7 @@
                 </section>
                <footer class="site-footer block-invert">
                   <div class="container">
-                     <img class="site-footer-logo img-responsive" src="css/logo-v1.png" data-sr="bottom">
+                     <img class="site-footer-logo img-responsive" src="img/logo-v1.png" data-sr="bottom">
                      <p class="site-footer-copyright">2013-2019 © <a href="https://flo.cash">FLO</a> | All Rights Reserved.</p>
                   </div>
                </footer>
